<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController">
            <connections>
                <outlet property="accoundTextField" destination="W0k-eo-S6T" id="J7c-oI-F6V"/>
                <outlet property="headerImageView" destination="U5R-HE-pkC" id="D6Z-Mx-hCX"/>
                <outlet property="loginButton" destination="esE-iS-VXy" id="A3P-bZ-v29"/>
                <outlet property="passwordTextField" destination="khX-XL-6y7" id="WD8-wG-w9h"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="khX-XL-6y7">
                    <rect key="frame" x="92" y="280" width="263" height="30"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="kBA-gy-qe8"/>
                    </constraints>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="账户：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r2V-Oy-dsA">
                    <rect key="frame" x="20" y="220" width="52" height="30"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="52" id="6DV-10-ifX"/>
                        <constraint firstAttribute="height" constant="30" id="KsT-ta-mvX"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密码：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="veT-OC-V3N">
                    <rect key="frame" x="20" y="280" width="52" height="30"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="52" id="01z-4J-Z28"/>
                        <constraint firstAttribute="height" constant="30" id="X1K-iu-8UR"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="U5R-HE-pkC">
                    <rect key="frame" x="138" y="70" width="100" height="100"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="100" id="H9y-yj-lbE"/>
                        <constraint firstAttribute="width" constant="100" id="zfd-ae-g1f"/>
                    </constraints>
                </imageView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="esE-iS-VXy">
                    <rect key="frame" x="20" y="360" width="335" height="40"/>
                    <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="40" id="fbV-A1-VqM"/>
                    </constraints>
                    <state key="normal" title="登录"/>
                </button>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入账户名" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="W0k-eo-S6T">
                    <rect key="frame" x="92" y="220" width="263" height="30"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="8NB-iA-zYX"/>
                    </constraints>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstItem="esE-iS-VXy" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="20" id="07l-lT-ngi"/>
                <constraint firstItem="U5R-HE-pkC" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="50" id="1a5-iW-mJ0"/>
                <constraint firstItem="r2V-Oy-dsA" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="20" id="2tc-Lp-j6S"/>
                <constraint firstItem="W0k-eo-S6T" firstAttribute="leading" secondItem="r2V-Oy-dsA" secondAttribute="trailing" constant="20" id="770-re-KDJ"/>
                <constraint firstItem="W0k-eo-S6T" firstAttribute="top" secondItem="U5R-HE-pkC" secondAttribute="bottom" constant="50" id="C4g-QT-J3f"/>
                <constraint firstItem="veT-OC-V3N" firstAttribute="top" secondItem="r2V-Oy-dsA" secondAttribute="bottom" constant="30" id="Ebl-Yw-Mr0"/>
                <constraint firstItem="r2V-Oy-dsA" firstAttribute="top" secondItem="U5R-HE-pkC" secondAttribute="bottom" constant="50" id="EiH-XY-QQe"/>
                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="khX-XL-6y7" secondAttribute="trailing" constant="20" id="Iky-Ql-eio"/>
                <constraint firstItem="khX-XL-6y7" firstAttribute="top" secondItem="W0k-eo-S6T" secondAttribute="bottom" constant="30" id="KGx-HQ-h1d"/>
                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="esE-iS-VXy" secondAttribute="trailing" constant="20" id="LvW-IP-Nrk"/>
                <constraint firstItem="veT-OC-V3N" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="20" id="MU8-6p-uNk"/>
                <constraint firstItem="khX-XL-6y7" firstAttribute="leading" secondItem="veT-OC-V3N" secondAttribute="trailing" constant="20" id="OlQ-QK-iRy"/>
                <constraint firstItem="esE-iS-VXy" firstAttribute="top" secondItem="veT-OC-V3N" secondAttribute="bottom" constant="50" id="Vc8-pv-juW"/>
                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="W0k-eo-S6T" secondAttribute="trailing" constant="20" id="pMA-Tn-3aX"/>
                <constraint firstItem="U5R-HE-pkC" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="tOH-Bl-UKN"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
            <point key="canvasLocation" x="24.5" y="51.5"/>
        </view>
    </objects>
</document>
